# asin

./: .antigravityrules  .dockerignore  .editorconfig  .env.example  .env.signing.example  .gitignore  .vercelignore  AGENTS.md  DEPLOYMENT_GUIDE_PROD.md  Dockerfile.bridge  Dockerfile.frontend  Dockerfile.sync-service  Dockerfile.whatsapp-bridge  README.md  check_tags.js  delete  docker-compose.dokploy.frontend.yml  docker-compose.dokploy.pdks.yml  docker-compose.dokploy.yml  index.html  package-lock.json  package.json  query  task.md  test_psql.cjs  test_psql_all.cjs  tmp_inspect_schema.js  tmp_schema_output.txt  tmp_test_conn.cjs  tsconfig.json  vercel.json  vite.config.ts  vite.eticaret-static.ts
DeskApp/: .gitignore  Cargo.toml  build.rs  build_error_utf8.txt  build_errors.txt  build_errors_2.txt  build_errors_2_utf8.txt  build_errors_3.txt  build_errors_3_utf8.txt  build_errors_4.txt  build_errors_4_utf8.txt  build_errors_5.txt  build_errors_5_utf8.txt  build_errors_6.txt  build_errors_6_utf8.txt  build_errors_utf8.txt  build_output.txt  build_output_utf8.txt  check_output.txt  check_output_utf8.txt  check_results_v2.txt  check_results_v2_utf8.txt  convert_icon.py  crash_log.txt  crash_log_start.txt  crash_log_utf8.txt  create_branding.py  debug_mssql_log.txt  download_dependencies.ps1  errors.json  errors.txt  errors2.txt  errors2_utf8.txt  errors3.txt  errors3_utf8.txt  errors_utf8.txt  installer.nsi  package.json  tauri.conf.json  tauri.portable.conf.json  (+2 more)
DeskApp/capabilities/: migrated.json
DeskApp/icons/: icon.icns
DeskApp/resources/: README_PRINTER_SERVICE.md  asinerp-admin.cmd  asinerp-admin.ps1  bridge-windows-expose-lan.cmd  bridge-windows-expose-lan.ps1  bridge.cjs  install-bridge-npm.cmd  install-bridge-npm.ps1  install-bridge.cmd  install-bridge.ps1  install-postgrest-service.cmd  install-postgrest-service.ps1  install-postgrest.ps1  install-services-common.ps1  install-services-manual.cmd  install-services-manual.ps1  install-services-setup.ps1  kitchen-print-service.mjs  package.json  pg-windows-expose-remote.cmd  pg-windows-expose-remote.ps1  postgrest-windows-expose-lan.cmd  postgrest-windows-expose-lan.ps1  retailex-admin.cmd  retailex-admin.ps1  schema.sql  start-postgrest-lan.cmd  start-postgrest-lan.ps1
DeskApp/resources/postgrest/: README.txt
DeskApp/resources/sumatra/: README.txt
DeskApp/scripts/: fetch-postgrest-windows.ps1  fetch-sumatra-portable.ps1
DeskApp/src/: backup_service.rs  bank_ops.rs  caller_id_serial.rs  config.rs  db.rs  db_ops.rs  db_utils.rs  enterprise_sync.rs  license.rs  logger.rs  logo_bridge.rs  logo_main.rs  logo_ui.slint  main.rs  maintenance.rs  mssql.rs  platform.rs  portable_bind.rs  printer_main.rs  remote_input.rs  rongta_scale.rs  scanner.rs  schema_gap.rs  screen_capture.rs  security.rs  service_main.rs  setup_main.rs  setup_ui.slint  sql_bridge_main.rs  sql_migration_split.rs  sync.rs  tools_main.rs  ui_hub.slint  windows_service_install.rs
src/sync-service/: Cargo.toml  dev-schema.sql
src/sync-service/.sqlx/: query-1aaae5ebc8ad578967309ddab6b3ef98c088de992f7960b76da9e1c2149ed3fc.json  query-244c19d6a96140a320e2dba1a3ec8bcfaa010f57e32725037db95620e8a53b74.json  query-299e25a644faf3e485ef4b6c14419d8d7233e703bea10eddec46127b9ac02844.json  query-301498f1220623030ce0a18cc1883b2928f80a27cd70d7258c1f8203cc945260.json  query-470ee30bebbd4c5b293c6e09cf0394e288ac2d4138dafd595902a5dc40e6c6d4.json  query-5e46b8752582f26880b561eadde987c7bd61e136d756d6cf8f2313c8f63cbeac.json  query-6828a7e0740a5e771db2b4a043c6d12dd14ca3a75e9a2bc1ed3edb450a099a27.json  query-6a3094a41432aafe217ef0f8f23501acda89c2215ebdd786f7439a727f9116a4.json  query-6c704d0884e59c07027b54fe181df5f50455c2f306c6acc4d563309464e676cc.json  query-7e6cb0eb698df034f6d155366fc3bf4050af7e39864407fc6b9838d99a3864f2.json  query-852dc2bf7e953ae1fd5f96371b8e3a317837d6083a9ad3839a685a9aaf847495.json  query-8b04db10bad0908b5460dc9379452c0e808805a512a0302f33f013f2278b2e5f.json  query-97cdf591461958220681176fe01dbf9ba865fea9982e9f316e0a84de28d30e7d.json  query-a78666de9aba1d2bef0ca14e64ba8fd64d360949b47e76135f50912444591b2b.json  query-bf31fa571a923134ffdb3c373f5daff4b3efc3b29f8a42e59aaf878a753a25cf.json  query-c25c106cd3bb0e2dc16b1830abf79be4c8fb0badea993eb6e71406095f0d4fee.json  (+7 more)
src/sync-service/src/: broadcast.rs  db.rs  main.rs  models.rs  (+1 more)
(+1972 files in other folders)
