[package]
name = "retailex-sync-service"
version = "2.0.0"
edition = "2021"
authors = ["RetailEX Team"]
description = "RetailEX - Multi-store synchronization service with WebSocket support"
default-run = "RetailEX-Sync-Service"

[[bin]]
name = "RetailEX-Sync-Service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID — 1.12+ getrandom 0.4 (edition2024) çeker; Docker Rust 1.83 ile uyum için 1.11
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression
flate2 = "1.0"

# Async utilities
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
